CHANGES
=======

* Generating qsub files
* FIX tox's issues
* Add API skeleton
* Add version handling with pbr
* Add static code analysis and tox
* very first commit