@@ -5,7 +5,7 @@ QASSEMBLER_VERSION = __version__
 CONTAINER_SHARED_VOLUME_PATH = '/shared-volume'
 HOST_SHARED_VOLUME_PATH = '/home/erik/code/thesis/shared-volume'
 CONTAINER_SSH_VOLUME_PATH = '/ssh-volume'
-HOST_SSH_VOLUME_PATH = '/home/erik/code/thesis/shared-volume'
+HOST_SSH_VOLUME_PATH = '/home/erik/code/thesis/ssh-volume'
 CONTAINER_PARAM_FILE_PATH = '/etc/params/param-file.json'
 
 OUTPUT_DIR_NAME = 'output'
